# aoc2025

./: .gitignore  Cargo.toml
src/: day-template.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  graph.rs  grid.rs  main.rs
