[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
bitvec = "1.0.1"
chumsky = { version = "0.11.2", default-features = false, features = ["std"] }
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
euclid = "0.22.11"
hashbag = "0.1.12"
itertools = "0.13.0"
log = "0.4.22"
num = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rayon = "1.8.0"
regex = "1.10.2"
smallvec = "1.15.1"
z3 = "0.19.6"

[profile.release]
debug = true
overflow-checks = true
